# roborun

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  USAGE_TERMS.txt  index.html  package-lock.json  package.json  project.hiber3d  tatus  tsconfig.json  vite.config.ts
assets/: BGM.scene  main.scene
assets/a/glbs/: player.glb
assets/a/scenes/: Collectible.scene  CollectiblesCurve.scene  CollectiblesLine.scene  Managers.scene  Obstacle.scene  Player.scene  RoboRun.scene  SegmentLeftBase.scene  SegmentRightBase.scene  SegmentStraightBase.scene
assets/a/scripts/: Collectible.js  FollowPlayer.js  Player.js  PowerUp.js  RemoveComponentOnEntityAfterDelay.js  RemoveScriptOnEntityAfterDelay.js  RoboRun.js  Running.js  RunningAnimations.js  SegmentSpawner.js  Tilt.js  Turn.js
assets/environments/: lightbox_negy.ktx2  lightbox_posx.ktx2  skybox_negx.ktx2  skybox_negz.ktx2  skybox_posy.ktx2  skybox_posz.ktx2
assets/glbs/: collectible.glb  plane.glb  player.glb  test.glb
assets/glbs/deathAnimations/: Sign_break.glb  Smoke.glb  Sparks.glb
assets/glbs/decorations/: Barrel.glb  Beam.glb  Cable_holder.glb  Cable_holder_B.glb  Ceiling_lamp.glb  Cone.glb  Drum.glb  Med_box.glb  Pallet.glb  Pipe_straight_A.glb  Pipe_straight_B.glb  Pipe_straight_C.glb  Pipe_turn_A.glb  Stairs.glb  Valve.glb  Wall_lamp.glb  Wheel_generator.glb
assets/glbs/motionPaths/: RestartMotionPathglb.glb
assets/glbs/obstacles/: Blockage_sign.glb  Grinder.glb  Processor.glb  Robot_arm.glb  obstacle_A.glb  obstacle_B.glb  obstacle_C.glb
assets/glbs/powerups/: PowerUp_auto_run.glb  PowerUp_magnet.glb
assets/glbs/primitives/: cylinder.glb
assets/glbs/rooms/: Room_incline_A.glb  Room_straight_A.glb  Room_straight_B.glb  Room_straight_C.glb  Room_straight_D.glb  Room_straight_E.glb  Room_straight_F.glb  Room_turn_left_A.glb  Room_turn_right_A NEW.glb  Room_turn_right_A.glb
assets/glbs/roomsNEW/: Room_end.glb  Room_incline_A.glb  Room_straight_A.glb  Room_straight_B.glb  Room_straight_C.glb  Room_straight_D.glb  Room_straight_E.glb  Room_straight_F.glb  (+2 more)
assets/scenes/: Collectible.scene  CollectiblesCurve.scene  CollectiblesDip.scene  CollectiblesLine.scene  GameManagers.scene  GameScene.scene  Managers.scene  Music.scene  Obstacle.scene  Player.scene  RoboRun.scene  RunningManagers.scene  RunningScene.scene  SegmentBridgeBase.scene  SegmentLeftBase.scene  SegmentRightBase.scene  SegmentStraightBase.scene  main.scene
assets/scripts/: AutoRunTemp.js  Camera.js  CanDive.js  CanJump.js  CanSlide.js  Collectible.js  CollectibleCounter.js  DeathCameraMove.js  DestroyWhenFarAwayFromPlayer.js  DifficultyManager.js  Diving.js  FollowPlayer.js  Jump.js  Jumping.js  MagnetTemp.js  Magnetizable.js  Move.js  Music.js  Mute.js  Obstacle.js  OnDeath.js  Player.js  PowerUp.js  RandomAnimationStart.js  ReduceColliderHeight.js  RemoveComponentOnEntityAfterDelay.js  RoboRun.js  Rotate.js  Running.js  RunningAnimations.js  SegmentDestroyer.js  SegmentSpawner.js  Slide.js  Sliding.js  Tilt.js  Turn.js  test.js
assets/ui/: magnet.rml  stats.rml  ui.rml
build_scripts/: app.js  create-audio-sprite.cjs  emscripten.cjs  emscripten.sh  gltfpack  pack_glbs.js  pack_glbs.sh  setup_emscripten.bat
game/: Main.cpp
game/Animated/: AnimatedEvents.hpp  AnimatedModule.cpp  AnimatedTypes.hpp
game/AnimationLoadout/: AnimationLoadoutEvents.hpp  AnimationLoadoutModule.cpp  AnimationLoadoutModule.hpp
game/Audio/: AudioEvents.hpp  AudioModule.cpp  AudioModule.hpp
game/Broadcast/: BroadcastEvents.hpp  BroadcastModule.cpp  BroadcastModule.hpp
game/ChangeableScene/: ChangeableSceneEvents.hpp  ChangeableSceneModule.cpp  ChangeableSceneModule.hpp
game/Gamepad/: GamepadModule.cpp  GamepadModule.hpp  GamepadTypes.hpp
game/Input/: InputEvents.hpp  InputModule.cpp  InputModule.hpp
game/Midi/: MidiEvents.hpp  MidiModule.cpp  MidiModule.hpp  MidiTypes.hpp
game/Path/: PathEvents.hpp  PathModule.cpp  PathModule.hpp  PathTypes.hpp
game/RoboRun/: InputEvents.hpp  RoboRunEvents.hpp  RoboRunModule.cpp  RoboRunModule.hpp  RoboRunTypes.hpp
game/SceneLoader/: SceneLoaderModule.cpp  SceneLoaderModule.hpp  SceneLoaderTypes.hpp
game/Segment/: SegmentEvents.hpp  SegmentModule.cpp  SegmentModule.hpp  SegmentTypes.hpp
game/VisualEffects/: VisualEffectsModule.cpp  VisualEffectsModule.hpp
input_glbs/: collectible.glb  player.glb  test.glb
input_glbs/deathAnimations/: Sign_break.glb
input_glbs/decorations/: Barrel.glb  Beam.glb  Cable_holder.glb  Cable_holder_B.glb  Ceiling_lamp.glb  Drum.glb  Med_box.glb  Pallet.glb  Pipe_straight_A.glb  Pipe_straight_B.glb  Pipe_straight_C.glb  Pipe_turn_A.glb  Valve.glb  Wall_lamp.glb  Wheel_generator.glb
input_glbs/obstacles/: Blockage_sign.glb  Processor.glb  Robot_arm.glb  obstacle_B.glb
input_glbs/powerups/: PowerUp_auto_run.glb  PowerUp_magnet.glb
input_glbs/primitives/: cylinder.glb
input_glbs/rooms/: Room_incline_A.glb  Room_straight_B.glb  Room_straight_F.glb  Room_turn_right_A.glb
input_glbs/roomsNEW/: Room_incline_A.glb  Room_straight_A.glb  Room_straight_C.glb  Room_straight_E.glb  Room_straight_F.glb  Room_turn_left_A.glb  Room_turn_right_A.glb
input_glbs/segments/: Segment_incline_A.glb  Segment_straight_A.glb
scripts/: emscripten.cjs  emscripten.sh  setup_emscripten.sh
web/: App.tsx  hiber3d.ts  index.css  main.tsx
web/audio/: AudioContext.tsx  AudioProvider.tsx  music.json  sfx.json  useAudio.ts  useMusicMultiTracks.tsx  useSoundEffects.tsx  useSoundSource.tsx
web/roborun/: Button.tsx  Fullscreen.tsx  GestureControls.tsx  LeaderboardButton.tsx  LeaderboardContent.tsx  MainMenu.tsx  Mute.tsx  RoborunMode.tsx  RoborunUI.tsx  ToggleButton.tsx  useFullscreen.ts  useGameState.ts  useLeaderboard.ts  useTouchControls.tsx
web/utils/: ga.ts  postMessage.ts  postScore.ts  telegram.ts
(+202 files in other folders)
